# docs/swagger.json
@@ -108,7 +108,7 @@
                         "CookieAuth": []
                     }
                 ],
-                "description": "Returns all posts for the given campaign ID, with campaign, platform, and pieces hydrated.",
+                "description": "Returns all posts for the given campaign ID, with campaign, platform, and assets hydrated.",
                 "produces": [
                     "application/json"
                 ],
@@ -381,7 +381,7 @@
                 }
             }
         },
-        "/api/content-bank/pieces": {
+        "/api/assets": {
             "get": {
                 "security": [
                     {
@@ -473,7 +473,7 @@
                 }
             }
         },
-        "/api/content-bank/pieces/{id}": {
+        "/api/assets/{id}": {
             "get": {
                 "security": [
                     {
@@ -1046,7 +1046,7 @@
                         "CookieAuth": []
                     }
                 ],
-                "description": "Returns all posts ordered by creation date, with campaign, platform, and pieces hydrated.",
+                "description": "Returns all posts ordered by creation date, with campaign, platform, and assets hydrated.",
                 "produces": [
                     "application/json"
                 ],
@@ -1138,7 +1138,7 @@
                         "CookieAuth": []
                     }
                 ],
-                "description": "Returns a single post by Sqid with campaign, platform, and pieces hydrated.",
+                "description": "Returns a single post by Sqid with campaign, platform, and assets hydrated.",
                 "produces": [
                     "application/json"
                 ],
